--- a/alacritty/.config/alacritty.yml
+++ b/alacritty/.config/alacritty.yml
@@ -1,3 +1,14 @@
+window:
+  padding:
+    x: 2
+    y: 2
+
+title: Alacritty
+
+scrolling:
+  # Maximum number of lines in the scrollback buffer.
+  history: 5000
+
 background_opacity: 1.0
 
 font:
@@ -18,3 +29,106 @@ font:
   bold_italic:
     family: JetBrainsMono Nerd Font
     style: Bold Italic
+
+# https://github.com/eendroroy/alacritty-theme
+schemes:
+  gruvbox_dark: &gruvbox_dark
+    primary:
+      # hard contrast: background = '0x1d2021'
+      background: '0x282828'
+      # soft contrast: background = '0x32302f'
+      foreground: '0xebdbb2'
+    normal:
+      black:   '0x282828'
+      red:     '0xcc241d'
+      green:   '0x98971a'
+      yellow:  '0xd79921'
+      blue:    '0x458588'
+      magenta: '0xb16286'
+      cyan:    '0x689d6a'
+      white:   '0xa89984'
+    bright:
+      black:   '0x928374'
+      red:     '0xfb4934'
+      green:   '0xb8bb26'
+      yellow:  '0xfabd2f'
+      blue:    '0x83a598'
+      magenta: '0xd3869b'
+      cyan:    '0x8ec07c'
+      white:   '0xebdbb2'
+
+  gruvbox_light: &gruvbox_light
+    primary:
+      # hard contrast: background = '0xf9f5d7'
+      background: '0xfbf1c7'
+      # soft contrast: background = '0xf2e5bc'
+      foreground: '0x3c3836'
+    normal:
+      black:   '0xfbf1c7'
+      red:     '0xcc241d'
+      green:   '0x98971a'
+      yellow:  '0xd79921'
+      blue:    '0x458588'
+      magenta: '0xb16286'
+      cyan:    '0x689d6a'
+      white:   '0x7c6f64'
+    bright:
+      black:   '0x928374'
+      red:     '0x9d0006'
+      green:   '0x79740e'
+      yellow:  '0xb57614'
+      blue:    '0x076678'
+      magenta: '0x8f3f71'
+      cyan:    '0x427b58'
+      white:   '0x3c3836'
+
+  papercolor_light: &papercolor_light
+    primary:
+      background: '0xEEEEEE'
+      foreground: '0x4D4D4C'
+    normal:
+      black:   '0xEDEDED'
+      red:     '0xD7005F'
+      green:   '0x718C00'
+      yellow:  '0xD75F00'
+      blue:    '0x4271AE'
+      magenta: '0x8959A8'
+      cyan:    '0x3E999F'
+      white:   '0x4D4D4C'
+    bright:
+      black:   '0x969694'
+      red:     '0xD7005F'
+      green:   '0x718C00'
+      yellow:  '0xD75F00'
+      blue:    '0x4271AE'
+      magenta: '0x8959A8'
+      cyan:    '0x3E999F'
+      white:   '0xF5F5F5'
+
+  thelovelace: &thelovelace
+    primary:
+      background: '0x1D1F28'
+      foreground: '0xFDFDFD'
+    normal:
+      black:   '0x282A36'
+      red:     '0xF37F97'
+      green:   '0x5ADECD'
+      yellow:  '0xF2A272'
+      blue:    '0x8897F4'
+      magenta: '0xC574DD'
+      cyan:    '0x79E6F3'
+      white:   '0xFDFDFD'
+    bright:
+      black:   '0x414458'
+      red:     '0xFF4971'
+      green:   '0x18E3C8'
+      yellow:  '0xEBCB8B'
+      blue:    '0xFF8037'
+      magenta: '0x556FFF'
+      cyan:    '0x3FDCEE'
+      white:   '0xBEBEC1'
+
+colors: *thelovelace
+# colors: *gruvbox_dark
+# colors: *gruvbox_light
+# colors: *papercolor_light
