--- a/alacritty/.config/alacritty.yml
+++ b/alacritty/.config/alacritty.yml
@@ -12,6 +12,7 @@ scrolling:
 background_opacity: 1.0
 
 font:
+  size: 11.0
   # Normal (roman) font face
   normal:
     family: JetBrainsMono Nerd Font # mononoki Nerd Font Mono # FiraCode Nerd Font Mono
