Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,5 +58,5 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager (keep this line at the very bottom of this file)
 run '~/.tmux/plugins/tpm/tpm'
