Update Tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,10 +27,20 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '10'
 set -g @resurrect-capture-pane-contents 'on'
+set -g @tmux-gruvbox 'dark'
 
 ################################################################################
 # General configuration
 ################################################################################
+
+# Setting the prefix from C-b to C-a
+set -g prefix C-a
+# Free the original Ctrl-b prefix keybinding
+unbind C-b
+
+# splitting panes with | and -
+bind | split-window -h
+bind - split-window -v
 
 # Turn on interactivity with mouse
 set -g mouse on
@@ -38,15 +48,14 @@ set -g mouse on
 # Change the position of the status bar
 set-option -g status-position bottom
 
-# Start window numbering at specific num
+# Set the base index for windows to 1 instead of 0
 set -g base-index 1
+
+# Set the base index for panes to 1 instead of 0
+set -g pane-base-index 1
 
 # Renumber windows on window close
 set -g renumber-windows on
-
-# These were settings I used with byobu
-set -g prefix F12
-unbind-key -n C-a
 
 ################################################################################
 # KEY BINDING
