Update Tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,7 +33,7 @@ set -g @tmux-gruvbox 'dark'
 # General configuration
 ################################################################################
 
-# Setting the prefix from C-b to C-a
+# Setting the prefix to Ctrl-a
 set -g prefix C-a
 # Free the original Ctrl-b prefix keybinding
 unbind C-b
