Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,33 +33,10 @@ set -g @tmux-gruvbox 'dark'
 # General configuration
 ################################################################################
 
-# Setting the prefix to Ctrl-a
+# set the prefix to Ctrl-a
 set -g prefix C-a
-# Free the original Ctrl-b prefix keybinding
+# don't use the original Ctrl-b prefix keybinding
 unbind C-b
-
-# splitting panes with | and -
-bind | split-window -h
-bind - split-window -v
-
-# Turn on interactivity with mouse
-set -g mouse on
-
-# Change the position of the status bar
-set-option -g status-position bottom
-
-# Set the base index for windows to 1 instead of 0
-set -g base-index 1
-
-# Set the base index for panes to 1 instead of 0
-set -g pane-base-index 1
-
-# Renumber windows on window close
-set -g renumber-windows on
-
-################################################################################
-# KEY BINDING
-################################################################################
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -67,5 +44,51 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of this file)
+# split panes with | and -
+bind | split-window -h
+bind - split-window -v
+
+# when splitting window, use the current path
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
+
+# new window should use the current path
+unbind-key c
+bind-key c new-window -c '#{pane_current_path}'
+
+# make mouse useful, tmux > 2.1 include select, resize pane/window and console wheel scroll
+set -g mouse on
+
+# move the status bar to top
+set-option -g status-position top
+
+# set first window to index 1 (not 0) to map more to the keyboard layout
+set -g base-index 1
+set -g pane-base-index 1
+# renumber windows on window close
+set -g renumber-windows on
+
+# show messages for 4 seconds instead
+set -g display-time 4000
+
+## Clipboard integration
+# ctrl+c to send to clipboard
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+# ctrl+v to paste from clipboard
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# selection with mouse should copy to clipboard right away, in addition to the default action.
+unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+
+# middle click to paste from the clipboard
+unbind-key MouseDown2Pane
+bind-key -n MouseDown2Pane run " \
+  X=$(xclip -o -sel clipboard); \
+  tmux set-buffer \"$X\"; \
+  tmux paste-buffer -p; \
+  tmux display-message 'pasted!' \
+"
+
+# initialize TMUX plugin manager (keep this line at the very bottom of this file)
 run '~/.tmux/plugins/tpm/tpm'
