Remove unused config from .tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,28 +48,16 @@ bind l select-pane -R
 bind | split-window -h
 bind - split-window -v
 
-# when splitting window, use the current path
-bind-key % split-window -h -c "#{pane_current_path}"
-bind-key '"' split-window -v -c "#{pane_current_path}"
-
-# new window should use the current path
-unbind-key c
-bind-key c new-window -c '#{pane_current_path}'
-
-# make mouse useful, tmux > 2.1 include select, resize pane/window and console wheel scroll
+# make mouse useful, tmux > 2.1 include select, resize pane/window and console
+# wheel scroll
 set -g mouse on
 
-# move the status bar to top
+# move the status bar to top (it's easier to click it to switch window)
 set-option -g status-position top
 
 # set first window to index 1 (not 0) to map more to the keyboard layout
 set -g base-index 1
 set -g pane-base-index 1
-# renumber windows on window close
-set -g renumber-windows on
-
-# show messages for 4 seconds instead
-set -g display-time 4000
 
 ## Clipboard integration
 # ctrl+c to send to clipboard
@@ -77,9 +65,11 @@ bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 # ctrl+v to paste from clipboard
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
-# selection with mouse should copy to clipboard right away, in addition to the default action.
+# selection with mouse should copy to clipboard right away, in addition to the
+# default action.
 unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run " \
+  tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
 # middle click to paste from the clipboard
 unbind-key MouseDown2Pane
