--- a/alacritty/.config/alacritty.yml
+++ b/alacritty/.config/alacritty.yml
@@ -1,5 +1,3 @@
-background_opacity: 1.0
-
 font:
   size: 11.0
   normal:
@@ -235,6 +233,7 @@ scrolling:
 title: Alacritty
 
 window:
+  opacity: 0.95
   padding:
     x: 10
     y: 10
