update Tmux config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -5,7 +5,7 @@
 # Plugins
 ################################################################################
 
-# Plugin manager for tmux 
+# Plugin manager for tmux
 set -g @plugin 'tmux-plugins/tpm'
 
 # Simple tmux options for anyone
@@ -67,18 +67,25 @@ bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 # selection with mouse should copy to clipboard right away, in addition to the
 # default action.
-unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run " \
-  tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+# unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+# bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run " \
+#   tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
 # middle click to paste from the clipboard
-unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run " \
-  X=$(xclip -o -sel clipboard); \
-  tmux set-buffer \"$X\"; \
-  tmux paste-buffer -p; \
-  tmux display-message 'pasted!' \
-"
+# unbind-key MouseDown2Pane
+# bind-key -n MouseDown2Pane run " \
+#   X=$(xclip -o -sel clipboard); \
+#   tmux set-buffer \"$X\"; \
+#   tmux paste-buffer -p; \
+#   tmux display-message 'pasted!' \
+# "
 
-# initialize TMUX plugin manager (keep this line at the very bottom of this file)
-run '~/.tmux/plugins/tpm/tpm'
+################################################################################
+# Initialize TMUX plugin manager
+#
+# You must git-clone the tpm repo to the expected location first!
+# git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
+#
+# Do not move this line, it has to stay at the very bottom of this file
+################################################################################
+run '~/.config/tmux/plugins/tpm/tpm'
