--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 Code/.config/
 !Code/.config/Code/User/keybindings.json
 !Code/.config/Code/User/settings.json
+
+# Ignore all Tmux plugins (installed by Tmux Plugin Manager)
+tmux/.config/tmux/plugins
