--- a/Code/.config/Code/User/extensions.json
+++ b/Code/.config/Code/User/extensions.json
@@ -7,7 +7,10 @@
     "mechatroner.rainbow-csv",
     "mhutchie.git-graph",
     "ms-azuretools.vscode-docker",
+    "mtxr.sqltools",
+    "mtxr.sqltools-driver-pg",
     "pflannery.vscode-versionlens",
+    "prisma.prisma",
     "tamasfe.even-better-toml",
     "tiehuis.zig"
   ]
