update git config

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -57,6 +57,11 @@
   cmd = difft "$LOCAL" "$REMOTE"
 [difftool "meld"]
   cmd = meld "$LOCAL" "$REMOTE"
+[filter "lfs"]
+  clean = git-lfs clean -- %f
+  process = git-lfs filter-process
+  required = true
+  smudge = git-lfs smudge -- %f
 [github]
   user = jackdbd
 [gui]
