--- a/ssh/.ssh/conf.d/github.conf
+++ b/ssh/.ssh/conf.d/github.conf
@@ -1,4 +1,4 @@
 Host github
     HostName github.com
-    IdentityFile ~/.ssh/keys/id_rsa_github
+    IdentityFile ~/.ssh/keys/id_github
     User git
