--- a/alacritty/.config/alacritty.yml
+++ b/alacritty/.config/alacritty.yml
@@ -1,8 +1,8 @@
 font:
   size: 11.0
   normal:
-    family: FiraCode
-    # family: JetBrainsMono Nerd Font
+    # family: FiraCode
+    family: JetBrainsMono Nerd Font
     # family: mononoki
     style: Regular
 
